<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <CheckBox
        android:id="@+id/checkTaskDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
         />
    <EditText
        android:id="@+id/taskTitleDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/checkTaskDetails"
        android:textSize="24sp"
        android:text="Title"

        />
    <EditText
        android:id="@+id/taskTextDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkTaskDetails"
        android:layout_marginTop="5dp"
        android:text="@string/textTask"
        android:textSize="22sp" />
    <Button
        android:id="@+id/details_save_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_toStartOf="@+id/details_delete_button"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="64dp"
        android:text="@string/save_button"
        android:textSize="32sp" />
    <Button
        android:id="@+id/details_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="64dp"
        android:text="@string/del"
        android:textSize="32sp" />
</RelativeLayout>